--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -1,1 +1,28 @@
-<p>product works!</p>
+<div class="card">
+    <div class="card-header">
+        <div class="row">
+            <div class="col col-md-6">
+                <h5 class="card-title"> Product</h5>
+            </div>
+            <div class="text-end col col-md-6"></div>
+        </div>
+    </div>
+    <div class="card-body">
+        <ngx-datatable [rows]="product.items" [count]="product.totalCount">
+            <ngx-datatable-column [name]="'categoryId'" prop="categoryId" resizeable></ngx-datatable-column>
+            <ngx-datatable-column [name]="'categoryName'" prop="categoryName" resizeable></ngx-datatable-column>
+            <ngx-datatable-column [name]="'name'" prop="name" resizeable></ngx-datatable-column>
+            <ngx-datatable-column [name]="'price'" prop="price" resizeable>
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{ row.price | currency:"VND" }}
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column [name]="'releaseDate'" prop="releaseDate" resizeable>
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{ row.releaseDate | date:"yyyy-MM-dd" }}
+                </ng-template>
+            </ngx-datatable-column>
+        </ngx-datatable>
+        <!-- <pre>{{product|json}}</pre> -->
+    </div>
+</div>
